Fix news page layout bug

--- a/dom/containers.css
+++ b/dom/containers.css
@@ -124,7 +124,7 @@ div.titlebar > .title {
   overflow: auto;
 }
 
-.grid, .news-grid {
+.grid {
   flow:grid(2 1 3,
             2 5 3,
             2 4 3);
@@ -132,7 +132,7 @@ div.titlebar > .title {
   height: *;
 }
 
-.grid > div:nth-child(1), .grid > div:nth-child(4), .news-grid > div:nth-child(1), .news-grid > div:nth-child(4) {
+.grid > div:nth-child(1), .grid > div:nth-child(4) {
   height: 80dip;
   width: *;
 }
@@ -142,11 +142,11 @@ div.titlebar > .title {
   width: 20dip;
 }
 
-.grid > div:nth-child(4), .news-grid > div:nth-child(4) {
+.grid > div:nth-child(4) {
   vertical-align: middle;
 }
 
-.grid > div:nth-child(4) *, .news-grid > div:nth-child(4) * {
+.grid > div:nth-child(4) * {
   text-transform: uppercase;
 }
 
@@ -164,46 +164,9 @@ div.titlebar > .title {
   height: *;
 }
 
-.news-grid > div:nth-child(2), .news-grid > div:nth-child(3) {
-  height: *;
-  width: *;
-}
-
-.news-grid > div:nth-child(5) {
-  width: *;
-  height: *;
-  padding: -10dip;
-}
-
 .join_server {
   min-width: 600dip;
   max-width: 700dip;
-}
-
-.news_items_container {
-  width: 400dip;
-  background-color: #0c151ee6;
-}
-
-.news_items_container > div:nth-child(2) {
-  aspect: "Emu.render_news_items";
-}
-
-.news_items_container > div:nth-child(2) > div {
-  width: *;
-  height: 60dip;
-}
-
-.news_items_container > div:nth-child(2) > div:nth-child(even) {
-  background-color: #0c151ee6;
-}
-
-.news_container {
-  width: 750dip;
-}
-
-.news_container .body {
-  padding-top: -5dip;
 }
 
 .logo {
