--- a/dom/news.css
+++ b/dom/news.css
@@ -1,3 +1,71 @@
+.news-grid {
+  flow:grid(2 1 3,
+            2 5 3,
+            2 4 3);
+  width: *;
+  height: *;
+}
+
+.news-grid > div:nth-child(1), .news-grid > div:nth-child(4) {
+  height: 80dip;
+  width: *;
+}
+
+.news-grid > div:nth-child(2), .news-grid > div:nth-child(3) {
+  height: *;
+  width: *;
+}
+
+.news-grid > div:nth-child(4) {
+  vertical-align: middle;
+}
+
+.news-grid > div:nth-child(4) * {
+  text-transform: uppercase;
+}
+
+.news-grid > div:nth-child(5) {
+  height: *;
+}
+
+.news_items_container {
+  width: 400dip;
+  background-color: #0c151ee6;
+}
+
+.news_items_container > div:nth-child(2) {
+  aspect: "Emu.render_news_items";
+}
+
+.news_items_container > div:nth-child(2) > div {
+  width: *;
+  height: 60dip;
+}
+
+.news_items_container > div:nth-child(2) > div:nth-child(even) {
+  background-color: #0c151ee6;
+}
+
+.news_container {
+  width: 750dip;
+  height: *;
+}
+
+.news_container > div:nth-child(2) {
+  padding-top: 10dip;
+  padding-bottom: 10dip;
+  background-color: #0c151ee6;
+  overflow-y: auto;
+  width: *;
+  height: *;
+  min-height: 0;
+  max-height: min-intrinsic;
+}
+
+#news {
+  height: min-intrinsic;
+}
+
 #news p {
   margin-top: 1em;
   margin-bottom: 1em;
@@ -7,19 +75,10 @@
   line-height: 1.5;
 }
 
-#news p:empty {
-  margin-top: 0;
-  margin-bottom: 0;
-  margin-left: 0;
-  margin-right: 0;
-  border-radius: 0;
-  line-height: 0;
-}
-
 #news img {
   border-style: none;
   aspect: "Emu.news_image";
-  image-rendering:optimize-quality;
+  image-rendering: optimize-quality;
 }
 
 #news img[data-ratio] {
